added an autoplay feature.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="score"></div>
 
     <button class="reset-score">Reset score</button>
+    <button class="auto-play">Auto play</button>
 
     <script src="script.js"></script>
 </body>
