added a reset confirmation message, also clearified the code more

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     <button class="reset-score">Reset score</button>
     <button class="auto-play">Auto play</button>
 
+    <div class="overlay hidden"></div>
+
+    <div class="confirm-reset hidden">
+        <h3>Reset score to 0 ?</h3>
+        <p>are you sure you want to restart the game? all progress made will be lost</p>
+        <div class="buttons-list">
+            <button class="yes">Yes</button>
+            <button class="no">No</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
